refactoring; add playground as git module
